--- a/index.html
+++ b/index.html
@@ -16,22 +16,30 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     /> -->
 
-    <link rel="stylesheet" href="./css/main.min.css">
-  
+    <link rel="stylesheet" href="./css/main.min.css" />
+
     <title>WebStudio</title>
   </head>
 
   <body>
-
     <!--HEADER-->
 
-    <header class="header">
+    <!-- <header class="header">
       <div class="header_container section_container">
         <a href="./index.html" class="link"><span class="header_logo">Web</span>Studio</a>
+
+        <button class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
+          <svg class="menu__icon" width="40" height="40" aria-label="Кнопка меню">
+            <use class="icon__menu" href="./images/icons.svg#icon-menu"></use>
+            <use class="icon__cross" href="./images/icons.svg#icon-cross"></use>
+          </svg>
+        </button>
         <nav class="header_nav">
           <ul class="header_menu list">
             <li class="header_item">
-              <a class="header_link header_link--line header_link--focus" href="./index.html">Студія</a>
+              <a class="header_link header_link--line header_link--focus" href="./index.html"
+                >Студія</a
+              >
             </li>
             <li class="header_item">
               <a class="header_link header_link--accent" href="./portfolio.html">Портфоліо</a>
@@ -61,24 +69,17 @@
           </li>
         </ul>
       </div>
-    </header>
+    </header> -->
 
     <!--MAIN-->
 
     <main class="main">
-
-      <section class="hero">
+      <!-- <section class="hero">
         <div class="section_container">
-          <h1 class="hero_title hero_title--focus">
-            Ефективні рішення для вашого бізнесу
-          </h1>
-          <button class="btn hero_btn" type="button" data-modal-open>
-            Замовити послугу
-          </button>
+          <h1 class="hero_title hero_title--focus">Ефективні рішення для вашого бізнесу</h1>
+          <button class="btn hero_btn" type="button" data-modal-open>Замовити послугу</button>
         </div>
-      </section>
-
-
+      </section> -->
 
       <section class="section_wrapper">
         <div class="section_container">
@@ -131,10 +132,7 @@
           </ul>
         </div>
       </section>
-
-
-
-
+<!-- 
       <section class="section_wrapper section_wrapper--modification">
         <div class="section_container">
           <h2 class="activity_title">Чим ми займаємось</h2>
@@ -158,10 +156,6 @@
         </div>
       </section>
 
-
-
-
-      
       <section class="team section_wrapper">
         <div class="section_container">
           <h2 class="team_title">Наша команда</h2>
@@ -225,7 +219,7 @@
                   </li>
 
                   <li class="icon-list">
-                    <a class="footer_section--advance " href="https://twitter.com">
+                    <a class="footer_section--advance" href="https://twitter.com">
                       <svg class="icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
@@ -233,7 +227,7 @@
                   </li>
 
                   <li class="icon-list">
-                    <a class="footer_section--advance " href="https://www.facebook.com/">
+                    <a class="footer_section--advance" href="https://www.facebook.com/">
                       <svg class="icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
@@ -241,7 +235,7 @@
                   </li>
 
                   <li class="icon-list">
-                    <a class="footer_section--advance " href="https://www.linkedin.com/">
+                    <a class="footer_section--advance" href="https://www.linkedin.com/">
                       <svg class="icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -259,7 +253,7 @@
 
                 <ul class="list footer_section">
                   <li class="icon-list">
-                    <a class="footer_section--advance " href="https://instagram.com">
+                    <a class="footer_section--advance" href="https://instagram.com">
                       <svg class="icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
@@ -391,15 +385,17 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
 
     <!--FOOTER-->
-
+<!-- 
     <footer class="footer">
       <div class="section_container footer_container">
         <div class="footer--transform">
-          <a href="./index.html" class="link footer_logo"><span class="header_logo">Web</span>Studio</a>
+          <a href="./index.html" class="link footer_logo"
+            ><span class="header_logo">Web</span>Studio</a
+          >
           <address class="footer_address">
             <ul class="footer_nav list">
               <li class="footer-item">
@@ -474,10 +470,10 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
 
     <!-- MODAL -->
-
+<!-- 
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="modal-btn" data-modal-close>
@@ -555,8 +551,60 @@
           <button class="btn submit-btn" type="submit">Відправити</button>
         </form>
       </div>
+    </div> -->
+
+    <div class="menu-container js-menu-container" id="mobile-menu">
+      <button class="menu-toggle js-close-menu">
+        <svg class="menu__icon" width="40" height="40" aria-label="Кнопка меню">
+          <use class="icon__menu" href="./images/icons.svg#icon-menu"></use>
+          <use class="icon__cross" href="./images/icons.svg#icon-cross"></use>
+        </svg>
+      </button>
+
+      <ul class="mobile-menu list">
+        <li>
+          <a href="../goit-markup-hw-08/index.html" class="link-mobile link-mobile__focus"
+            >Студія</a
+          >
+        </li>
+        <li><a href="../goit-markup-hw-08/portfolio.html" class="link-mobile">Портфоліо</a></li>
+        <li><a href="" class="link-mobile">Контакти</a></li>
+      </ul>
+
+      <ul class="mobile-menu mobile-menu__position list">
+        <li class="mobile-contact">
+          <a class="mobile-phone" href="tel:+380961111111">
+            <!-- <svg class="" width="10" height="16">
+                <use href="./images/icons.svg#icon-smartphone"></use>
+              </svg> -->
+            +38 096 111 11 11</a
+          >
+        </li>
+        <li class="mobile-contact">
+          <a class="mobile-mail" href="mailto:info@devstudio.com">
+            <!-- <svg class="" width="16" height="12">
+                <use href="./images/icons.svg#icon-envelope"></use>
+              </svg> -->
+            info@devstudio.com</a
+          >
+        </li>
+      </ul>
+      <ul class="mobile-socials list">
+        <li class="mobile-sites mobile-sites__line"><a href="">Instagram</a></li>
+        <li class="mobile-sites mobile-sites__line"><a href="">Twitter</a></li>
+        <li class="mobile-sites mobile-sites__line"><a href="">facebook</a></li>
+        <li class="mobile-sites mobile-sites__line"><a href="">Linkedin</a></li>
+      </ul>
     </div>
 
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
+    <script src="./mobile-menu.js"></script>
     <script src="./modal.js" type="module"></script>
+    <script src="./menu.js"></script>
   </body>
 </html>
