adaptive - user, clients, team

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </div>
       </section> -->
 
-      <section class="section_wrapper">
+      <!-- <section class="section_wrapper">
         <div class="section_container">
           <h2 class="visually-hidden">Вигоди співпраці</h2>
           <ul class="advantage list">
@@ -131,9 +131,9 @@
             </li>
           </ul>
         </div>
-      </section>
-<!-- 
-      <section class="section_wrapper section_wrapper--modification">
+      </section> -->
+
+      <!-- <section class="section_wrapper section_wrapper--modification section_activity">
         <div class="section_container">
           <h2 class="activity_title">Чим ми займаємось</h2>
           <ul class="activity list">
@@ -154,14 +154,14 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
-      <section class="team section_wrapper">
+      <!-- <section class="team section_wrapper">
         <div class="section_container">
           <h2 class="team_title">Наша команда</h2>
           <ul class="team_section list">
             <li class="user">
-              <img class="user_img" src="./images/worker_1.jpg" width="270" alt="Ігор Дем'яненко" />
+              <img class="user_img" src="./images/worker_1.jpg" alt="Ігор Дем'яненко" />
 
               <div class="user_wrapper">
                 <h3 class="user_name">Ігор Дем'яненко</h3>
@@ -203,7 +203,7 @@
               </div>
             </li>
             <li class="user">
-              <img src="./images/worker_2.jpg" width="270" alt="Ольга Рєпіна" />
+              <img src="./images/worker_2.jpg" alt="Ольга Рєпіна" />
 
               <div class="user_wrapper">
                 <h3 class="user_name">Ольга Рєпіна</h3>
@@ -245,7 +245,7 @@
               </div>
             </li>
             <li class="user">
-              <img src="./images/worker_3.jpg" width="270" alt="Микола Тарасов" />
+              <img src="./images/worker_3.jpg" alt="Микола Тарасов" />
 
               <div class="user_wrapper">
                 <h3 class="user_name">Микола Тарасов</h3>
@@ -287,7 +287,7 @@
               </div>
             </li>
             <li class="user">
-              <img src="./images/worker_4.jpg" width="270" alt="Михайло Єрмаков" />
+              <img src="./images/worker_4.jpg" alt="Михайло Єрмаков" />
 
               <div class="user_wrapper">
                 <h3 class="user_name">Михайло Єрмаков</h3>
@@ -330,7 +330,7 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <section class="section_wrapper">
         <div class="section_container">
@@ -385,7 +385,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
 
     <!--FOOTER-->
