--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
         </div>
       </section> -->
 
-      <section class="section_wrapper">
+      <!-- <section class="section_wrapper">
         <div class="section_container">
           <h2 class="clients_title">Постійні клієнти</h2>
           <ul class="clients list">
@@ -385,13 +385,14 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
 
     <!--FOOTER-->
-<!-- 
+
     <footer class="footer">
       <div class="section_container footer_container">
+
         <div class="footer--transform">
           <a href="./index.html" class="link footer_logo"
             ><span class="header_logo">Web</span>Studio</a
@@ -470,7 +471,7 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
 
     <!-- MODAL -->
 <!-- 
