adaptive footer and partialy header

--- a/index.html
+++ b/index.html
@@ -24,16 +24,20 @@
   <body>
     <!--HEADER-->
 
-    <!-- <header class="header">
+    <header class="header">
       <div class="header_container section_container">
         <a href="./index.html" class="link"><span class="header_logo">Web</span>Studio</a>
 
+
         <button class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
           <svg class="menu__icon" width="40" height="40" aria-label="Кнопка меню">
-            <use class="icon__menu" href="./images/icons.svg#icon-menu"></use>
             <use class="icon__cross" href="./images/icons.svg#icon-cross"></use>
+            <use class="icon__menu" href="./images/icons.svg#icon-menu"></use>
+
           </svg>
         </button>
+
+
         <nav class="header_nav">
           <ul class="header_menu list">
             <li class="header_item">
@@ -69,17 +73,17 @@
           </li>
         </ul>
       </div>
-    </header> -->
+    </header>
 
     <!--MAIN-->
 
     <main class="main">
-      <!-- <section class="hero">
+      <section class="hero">
         <div class="section_container">
           <h1 class="hero_title hero_title--focus">Ефективні рішення для вашого бізнесу</h1>
           <button class="btn hero_btn" type="button" data-modal-open>Замовити послугу</button>
         </div>
-      </section> -->
+      </section>
 
       <!-- <section class="section_wrapper">
         <div class="section_container">
@@ -131,9 +135,9 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
-      <!-- <section class="section_wrapper section_wrapper--modification section_activity">
+      <section class="section_wrapper section_wrapper--modification section_activity">
         <div class="section_container">
           <h2 class="activity_title">Чим ми займаємось</h2>
           <ul class="activity list">
@@ -154,9 +158,9 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
-      <!-- <section class="team section_wrapper">
+      <section class="team section_wrapper">
         <div class="section_container">
           <h2 class="team_title">Наша команда</h2>
           <ul class="team_section list">
@@ -330,9 +334,9 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
-      <!-- <section class="section_wrapper">
+      <section class="section_wrapper">
         <div class="section_container">
           <h2 class="clients_title">Постійні клієнти</h2>
           <ul class="clients list">
