--- a/index.html
+++ b/index.html
@@ -24,6 +24,51 @@
       <div class="header_container section_container">
         <a href="./index.html" class="link"><span class="header_logo">Web</span>Studio</a>
 
+            <!-- MOBILE MENU -->
+
+    <div class="menu-container js-menu-container" id="mobile-menu">
+      <button class="menu-toggle js-close-menu">
+        <svg class="menu__icon" width="40" height="40" aria-label="Кнопка меню">
+          <use class="icon__menu" href="./svg/icons.svg#icon-menu"></use>
+          <use class="icon__cross" href="./svg/icons.svg#icon-cross"></use>
+        </svg>
+      </button>
+
+      <ul class="mobile-menu list">
+        <li>
+          <a href="./index.html" class="link-mobile link-mobile__focus">Студія</a>
+        </li>
+        <li><a href="./portfolio.html" class="link-mobile">Портфоліо</a></li>
+        <li><a href="" class="link-mobile">Контакти</a></li>
+      </ul>
+
+      <ul class="mobile-menu mobile-menu__position list">
+        <li class="mobile-contact">
+          <a class="mobile-phone" href="tel:+380961111111">
+            <!-- <svg class="" width="10" height="16">
+                <use href="./images/icons.svg#icon-smartphone"></use>
+              </svg> -->
+            +38 096 111 11 11</a
+          >
+        </li>
+        <li class="mobile-contact">
+          <a class="mobile-mail" href="mailto:info@devstudio.com">
+            <!-- <svg class="" width="16" height="12">
+                <use href="./images/icons.svg#icon-envelope"></use>
+              </svg> -->
+            info@devstudio.com</a
+          >
+        </li>
+      </ul>
+      <ul class="mobile-socials list">
+        <li class="mobile-sites mobile-sites__line"><a href="">Instagram</a></li>
+        <li class="mobile-sites mobile-sites__line"><a href="">Twitter</a></li>
+        <li class="mobile-sites mobile-sites__line"><a href="">facebook</a></li>
+        <li class="mobile-sites mobile-sites__line"><a href="">Linkedin</a></li>
+      </ul>
+    </div>
+
+
         <button class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
           <svg class="menu__icon" width="40" height="40" aria-label="Кнопка меню">
             <use class="icon__cross" href="./svg/icons.svg#icon-cross"></use>
@@ -158,7 +203,11 @@
           <h2 class="team_title">Наша команда</h2>
           <ul class="team_section list">
             <li class="user">
-              <img class="user_img" src="./images/worker_1.jpg" alt="Ігор Дем'яненко" />
+              <img class="user_img" 
+              srcset="./img/mobile/team1 img480.jpg 480w,
+              ./img/mobile/team1 img@2x 480.jpg 480w, "
+              src="./images/worker_1.jpg" 
+              alt="Ігор Дем'яненко" />
 
               <div class="user_wrapper">
                 <h3 class="user_name">Ігор Дем'яненко</h3>
@@ -550,49 +599,7 @@
       </div>
     </div>
 
-    <!-- MOBILE MENU -->
 
-    <div class="menu-container js-menu-container" id="mobile-menu">
-      <button class="menu-toggle js-close-menu">
-        <svg class="menu__icon" width="40" height="40" aria-label="Кнопка меню">
-          <use class="icon__menu" href="./svg/icons.svg#icon-menu"></use>
-          <use class="icon__cross" href="./svg/icons.svg#icon-cross"></use>
-        </svg>
-      </button>
-
-      <ul class="mobile-menu list">
-        <li>
-          <a href="./index.html" class="link-mobile link-mobile__focus">Студія</a>
-        </li>
-        <li><a href="./portfolio.html" class="link-mobile">Портфоліо</a></li>
-        <li><a href="" class="link-mobile">Контакти</a></li>
-      </ul>
-
-      <ul class="mobile-menu mobile-menu__position list">
-        <li class="mobile-contact">
-          <a class="mobile-phone" href="tel:+380961111111">
-            <!-- <svg class="" width="10" height="16">
-                <use href="./images/icons.svg#icon-smartphone"></use>
-              </svg> -->
-            +38 096 111 11 11</a
-          >
-        </li>
-        <li class="mobile-contact">
-          <a class="mobile-mail" href="mailto:info@devstudio.com">
-            <!-- <svg class="" width="16" height="12">
-                <use href="./images/icons.svg#icon-envelope"></use>
-              </svg> -->
-            info@devstudio.com</a
-          >
-        </li>
-      </ul>
-      <ul class="mobile-socials list">
-        <li class="mobile-sites mobile-sites__line"><a href="">Instagram</a></li>
-        <li class="mobile-sites mobile-sites__line"><a href="">Twitter</a></li>
-        <li class="mobile-sites mobile-sites__line"><a href="">facebook</a></li>
-        <li class="mobile-sites mobile-sites__line"><a href="">Linkedin</a></li>
-      </ul>
-    </div>
 
     <script
       defer
