--- a/portfolio.html
+++ b/portfolio.html
@@ -22,6 +22,8 @@
     <header class="header">
       <div class="header_container section_container">
         <a href="./index.html" class="link"><span class="header_logo">Web</span>Studio</a>
+
+
             <!-- MOBILE MENU -->
 
     <div class="menu-container js-menu-container" id="mobile-menu">
@@ -43,17 +45,13 @@
       <ul class="mobile-menu mobile-menu__position list">
         <li class="mobile-contact">
           <a class="mobile-phone" href="tel:+380961111111">
-            <!-- <svg class="" width="10" height="16">
-                <use href="./images/icons.svg#icon-smartphone"></use>
-              </svg> -->
+
             +38 096 111 11 11</a
           >
         </li>
         <li class="mobile-contact">
           <a class="mobile-mail" href="mailto:info@devstudio.com">
-            <!-- <svg class="" width="16" height="12">
-                <use href="./images/icons.svg#icon-envelope"></use>
-              </svg> -->
+
             info@devstudio.com</a
           >
         </li>
@@ -142,19 +140,17 @@
                 <div class="portfolio-cover">
                   <img
                     class="img"
-
-
-                      srcset="./img/mobile/portfolio img 480.jpg 480vw, 
-                      ./img/mobile/portfolio img@2x 480.jpg 480vw 2x,
-                      ./img/tab/portfolio M img 768.jpg 768vw,
-                      ./img/tab/portfolio M img@2x 768.jpg 768vw 2x,
-                      ./img/laptop/portfolio L img 1200.jpg 1200vw,
-                      ./img/laptop/portfolio L img@2x 1200.jpg 1200vw 2x,
+                      srcset="
+                      ./img/tab/portfolio M img 354.jpg 354w,
+                      ./img/laptop/portfolio L img 370.jpg 370w,
+                      ./img/mobile/portfolio img 450.jpg 450w,
+                      ./img/laptop/portfolio L img@2x 540.jpg 540w,
+                      ./img/tab/portfolio M img@2x 708.jpg 708w,
+                      ./img/mobile/portfolio img@2x 900.jpg 900w,
                       "
-                      sizes="(min-width:1200px) 30vw, (min-width: 768px) 50vw, (min-width: 480px) 100vw, 100vw"
+                      sizes="(min-width:1200px) 370w, (min-width: 768px) 354w, (min-width: 480px) 450w, 100vw"
 
-
-                    src="./img/mobile/portfolio img 480.jpg"
+                    src="./img/mobile/portfolio img 450.jpg"
                     width="100%"
                     alt="лептоп з картками працівників"
                   />
@@ -176,7 +172,21 @@
             <li class="portfolio_border">
               <a class="portfolio-link" href="">
                 <div class="portfolio-cover">
-                  <img src="./images/card_2.jpg" width="370" alt="баскетболісти" />
+                  <img 
+                  class="img"
+                      srcset="
+                      ./img/tab/portfolio1 M img 354.jpg 354w,
+                      ./img/laptop/portfolio1 L img 370.jpg 370w,
+                      ./img/mobile/portfolio1 img 450.jpg 450w,
+                      ./img/laptop/portfolio1 L img@2x 540.jpg 540w,
+                      ./img/tab/portfolio1 M img@2x 708.jpg 708w,
+                      ./img/mobile/portfolio1 img@2x 900.jpg 900w,
+                      "
+                      sizes="(min-width:1200px) 370w, (min-width: 768px) 354w, (min-width: 480px) 450w, 100vw"
+
+                    src="./img/mobile/portfolio1 img 450.jpg"
+                    width="100%"
+                   alt="баскетболісти" />
 
                   <div class="overlay-portfolio">
                     <p class="overlay-text">
@@ -196,7 +206,21 @@
             <li class="portfolio_border">
               <a class="portfolio-link" href="">
                 <div class="portfolio-cover">
-                  <img src="./images/card_3.jpg" width="370" alt="логотип ресторану" />
+                  <img 
+                  class="img"
+                      srcset="
+                      ./img/tab/portfolio2 M img 354.jpg 354w,
+                      ./img/laptop/portfolio2 L img 370.jpg 370w,
+                      ./img/mobile/portfolio2 img 450.jpg 450w,
+                      ./img/laptop/portfolio2 L img@2x 540.jpg 540w,
+                      ./img/tab/portfolio2 M img@2x 708.jpg 708w,
+                      ./img/mobile/portfolio2 img@2x 900.jpg 900w,
+                      "
+                      sizes="(min-width:1200px) 370w, (min-width: 768px) 354w, (min-width: 480px) 450w, 100vw"
+
+                    src="./img/mobile/portfolio2 img 450.jpg"
+                    width="100%" 
+                  alt="логотип ресторану" />
 
                   <div class="overlay-portfolio">
                     <p class="overlay-text">
@@ -215,7 +239,21 @@
             </li>
             <li class="portfolio_border">
               <a class="portfolio-link" href="">
-                <img src="./images/card_4.jpg" width="370" alt="навушники" />
+                <img 
+                class="img"
+                      srcset="
+                      ./img/tab/portfolio3 M img 354.jpg 354w,
+                      ./img/laptop/portfolio3 L img 370.jpg 370w,
+                      ./img/mobile/portfolio3 img 450.jpg 450w,
+                      ./img/laptop/portfolio3 L img@2x 540.jpg 540w,
+                      ./img/tab/portfolio3 M img@2x 708.jpg 708w,
+                      ./img/mobile/portfolio3 img@2x 900.jpg 900w,
+                      "
+                      sizes="(min-width:1200px) 370w, (min-width: 768px) 354w, (min-width: 480px) 450w, 100vw"
+
+                    src="./img/mobile/portfolio3 img 450.jpg"
+                    width="100%" 
+                alt="навушники" />
                 <div class="portfolio-img">
                   <h2 class="portfolio-title">Проєкт Prime</h2>
                   <p class="portfolio-subtitle">Маркетинг</p>
@@ -224,7 +262,21 @@
             </li>
             <li class="portfolio_border">
               <a class="portfolio-link" href="">
-                <img src="./images/card_5.jpg" width="370" alt="картонні коробки" />
+                <img 
+                class="img"
+                      srcset="
+                      ./img/tab/portfolio4 M img 354.jpg 354w,
+                      ./img/laptop/portfolio4 L img 370.jpg 370w,
+                      ./img/mobile/portfolio4 img 450.jpg 450w,
+                      ./img/laptop/portfolio4 L img@2x 540.jpg 540w,
+                      ./img/tab/portfolio4 M img@2x 708.jpg 708w,
+                      ./img/mobile/portfolio4 img@2x 900.jpg 900w,
+                      "
+                      sizes="(min-width:1200px) 370w, (min-width: 768px) 354w, (min-width: 480px) 450w, 100vw"
+
+                    src="./img/mobile/portfolio4 img 450.jpg"
+                    width="100%"
+                alt="картонні коробки" />
                 <div class="portfolio-img">
                   <h2 class="portfolio-title">Проєкт Boxes</h2>
                   <p class="portfolio-subtitle">Додаток</p>
@@ -233,7 +285,21 @@
             </li>
             <li class="portfolio_border">
               <a class="portfolio-link" href="">
-                <img src="./images/card_6.jpg" width="370" alt="монітор" />
+                <img 
+                class="img"
+                      srcset="
+                      ./img/tab/portfolio5 M img 354.jpg 354w,
+                      ./img/laptop/portfolio5 L img 370.jpg 370w,
+                      ./img/mobile/portfolio5 img 450.jpg 450w,
+                      ./img/laptop/portfolio5 L img@2x 540.jpg 540w,
+                      ./img/tab/portfolio5 M img@2x 708.jpg 708w,
+                      ./img/mobile/portfolio5 img@2x 900.jpg 900w,
+                      "
+                      sizes="(min-width:1200px) 370w, (min-width: 768px) 354w, (min-width: 480px) 450w, 100vw"
+
+                    src="./img/mobile/portfolio5 img 450.jpg"
+                    width="100%" 
+                alt="монітор" />
                 <div class="portfolio-img">
                   <h2 class="portfolio-title">Inspiration has no Borders</h2>
                   <p class="portfolio-subtitle">Веб-сайт</p>
@@ -242,7 +308,21 @@
             </li>
             <li class="portfolio_border">
               <a class="portfolio-link" href="">
-                <img src="./images/card_7.jpg" width="370" alt="журнал" />
+                <img 
+                class="img"
+                      srcset="
+                      ./img/tab/portfolio6 M img 354.jpg 354w,
+                      ./img/laptop/portfolio6 L img 370.jpg 370w,
+                      ./img/mobile/portfolio6 img 450.jpg 450w,
+                      ./img/laptop/portfolio6 L img@2x 540.jpg 540w,
+                      ./img/tab/portfolio6 M img@2x 708.jpg 708w,
+                      ./img/mobile/portfolio6 img@2x 900.jpg 900w,
+                      "
+                      sizes="(min-width:1200px) 370w, (min-width: 768px) 354w, (min-width: 480px) 450w, 100vw"
+
+                    src="./img/mobile/portfolio6 img 450.jpg"
+                    width="100%"
+                alt="журнал" />
                 <div class="portfolio-img">
                   <h2 class="portfolio-title">Видання Limited Edition</h2>
                   <p class="portfolio-subtitle">Дизайн</p>
@@ -251,7 +331,21 @@
             </li>
             <li class="portfolio_border">
               <a class="portfolio-link" href="">
-                <img src="./images/card_8.jpg" width="370" alt="етикетка" />
+                <img 
+                class="img"
+                      srcset="
+                      ./img/tab/portfolio7 M img 354.jpg 354w,
+                      ./img/laptop/portfolio7 L img 370.jpg 370w,
+                      ./img/mobile/portfolio7 img 450.jpg 450w,
+                      ./img/laptop/portfolio7 L img@2x 540.jpg 540w,
+                      ./img/tab/portfolio7 M img@2x 708.jpg 708w,
+                      ./img/mobile/portfolio7 img@2x 900.jpg 900w,
+                      "
+                      sizes="(min-width:1200px) 370w, (min-width: 768px) 354w, (min-width: 480px) 450w, 100vw"
+
+                    src="./img/mobile/portfolio7 img 450.jpg"
+                    width="100%" 
+                alt="етикетка" />
                 <div class="portfolio-img">
                   <h2 class="portfolio-title">Проєкт LAB</h2>
                   <p class="portfolio-subtitle">Маркетинг</p>
@@ -260,7 +354,21 @@
             </li>
             <li class="portfolio_border">
               <a class="portfolio-link" href="">
-                <img src="./images/card_9.jpg" width="370" alt="чоловік друкує на ноутбоці" />
+                <img 
+                class="img"
+                      srcset="
+                      ./img/tab/portfolio8 M img 354.jpg 354w,
+                      ./img/laptop/portfolio8 L img 370.jpg 370w,
+                      ./img/mobile/portfolio8 img 450.jpg 450w,
+                      ./img/laptop/portfolio8 L img@2x 540.jpg 540w,
+                      ./img/tab/portfolio8 M img@2x 708.jpg 708w,
+                      ./img/mobile/portfolio8 img@2x 900.jpg 900w,
+                      "
+                      sizes="(min-width:1200px) 370w, (min-width: 768px) 354w, (min-width: 480px) 450w, 100vw"
+
+                    src="./img/mobile/portfolio8 img 450.jpg"
+                    width="100%"
+                alt="чоловік друкує на ноутбоці" />
                 <div class="portfolio-img">
                   <h2 class="portfolio-title">Growing Business</h2>
                   <p class="portfolio-subtitle">Додаток</p>
